gcc/testsuite/g++.old-deja/g++.ns/using1.C
// { dg-do assemble  }
using namespace bb; // { dg-error "" } .*

